Fixed User Setting of Dark Mode
Some changes may be redundant but I've tried too many things to fix this issue, so I don't remember what can be removed. But it works now!

--- a/public/content.css
+++ b/public/content.css
@@ -38,6 +38,11 @@
 	color: white;
 }
 
+body.cl-dark-mode {
+    background-color: #333;
+    color: white;
+}
+
 .dark-mode .cl-header {
 	color: white;
 }
