--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,6 @@ body {
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
-		background-color: #ffffff;
 	}
 }
 
